unmaximize the window any time it's moved or sized. bug 98701 r=hyatt,jaggernaut